# halo2-base

./: Cargo.toml
src/: lib.rs  poseidon.rs
src/gates/: flex_gate.rs  mod.rs
