[package]
name = "halo2_base"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
ff = "0.12.0"

poseidon = { git = "https://github.com/maxgillett/poseidon", branch = "halo2_fri" }

# halo2
halo2_proofs = { git = "https://github.com/maxgillett/halo2-ce", branch = "halo2_fri" }

# plotting circuit layout
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

[features]
default = ["display"]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]
display = []
